chore: change slider markup to avoid overlapped with marks

--- a/src/application/src/containers/Position/PositionForm/PositionForm.scss
+++ b/src/application/src/containers/Position/PositionForm/PositionForm.scss
@@ -89,7 +89,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-top: 5px;
+    margin-top: 15px;
 
     .hint {
       font-size: 0.8rem;
